--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>pav.design</title>
 </head>
 <body>
-  <h1>pav<span class="dot">.</span>design</h1>
+  <p>pav<span class="dot">.</span>design</p>
   <p>
     Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
