initializing css grid

--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/grid.css">
   <title>pav.design</title>
 </head>
 <body>
-  <p>pav<span class="dot">.</span>design</p>
-  <p>
-    Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-    consequat.
-  </p>
+  <div class="grid-container">
+
+      <div class="logo">
+          <p>pav<span class="dot">.</span>design</p>
+      </div>
+      <div class="moto">
+        <p>
+          Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+          consequat.
+        </p></div>
+
+  </div>
 </body>
 </html>
