shaping the header with margins and paddings

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
           <p>pav<span class="dot">.</span>design</p>
       </div>
       <div class="moto">
-        <p>
-          Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-          consequat.
-        </p></div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit consequat.
+          </p>
+        </div>
+        <div>
+          x
+        </div>
+        
+      </div>
 
   </div>
 </body>
