--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <title>pav.design</title>
+  <title>pawel klasa</title>
 </head>
 <body>
   <div class="grid-container">
 
       <div class="logo">
-          <p>pav<span class="dot">.</span>design</p>
+          <p>pawel klasa</p>
       </div>
       <div class="moto">
         <div>
