--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   <div class="grid-container">
 
       <div class="logo">
-          <p>pawel klasa</p>
+          <div class="logo-text">pawel klasa</div>
+          <div class="senior">Senior <a href="#">Digital Product</a> Designer from London</div>
       </div>
       <div class="moto">
         <div>
           <p>
-            Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit consequat.
+            <a href="#">WORK</a>&nbsp;&nbsp; <a href="#">BLOG</a>&nbsp;&nbsp; <a href="#">ABOUT</a>
           </p>
         </div>
-        <div class="arrow animated infinite bounce">
+        <!-- <div class="arrow animated infinite bounce">
             <svg width="30" height="50" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
             <g>
@@ -36,7 +37,7 @@
             </g>
             
             </svg>
-        </div>
+        </div> -->
         
       </div>
 
