grid for work items

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <div class="logo-text">pawel klasa</div>
           <div class="senior">Senior <a href="#">Digital Product</a> Designer from London</div>
       </div>
+
       <div class="moto">
         <div>
           <p>
@@ -39,6 +40,21 @@
             </svg>
         </div> -->
         
+      </div>
+
+      <!-- work examples grid -->
+      <div class="grid-container-work">
+        <div class="one">
+          1
+        </div>
+
+        <div class="two">
+          2
+        </div>
+
+        <div class="three">
+          3
+        </div>
       </div>
 
   </div>
