--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       <!-- work examples grid -->
       <div class="grid-container-work">
         <div class="one">
-          1
+          <img src="img/work1.jpg" class="responsive">
         </div>
 
         <div class="two">
-          2
+          <img src="img/work2.png" class="responsive">
         </div>
 
         <div class="three">
-          3
+          <img src="img/work5.png" class="responsive">
         </div>
       </div>
 
