6 items in a grid

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
         <div class="three">
           <img src="img/work5.png" class="responsive">
         </div>
+        <div class="four">
+          <img src="img/work9.jpg" class="responsive">
+        </div>
+
+        <div class="five">
+          <img src="img/work3.jpg" class="responsive">
+        </div>
+
+        <div class="six">
+          <img src="img/work4.jpg" class="responsive">
+        </div>
       </div>
 
   </div>
