--- a/index.html
+++ b/index.html
@@ -44,27 +44,33 @@
 
       <!-- work examples grid -->
       <div class="grid-container-work">
-        <div class="one">
-          <img src="img/work1.jpg" class="responsive">
+        <div class="hover one">
+          <a href="#"><img src="img/work1.jpg" class="responsive"></a>
+          <p class="title">Jaguar Land Rover</p>
         </div>
 
-        <div class="two">
-          <img src="img/work2.png" class="responsive">
+        <div class="hover two">
+          <a href="#"><img src="img/work2.png" class="responsive"></a>
+          <p class="title">GCHQ</p>
         </div>
 
-        <div class="three">
-          <img src="img/work5.png" class="responsive">
+        <div class="hover three">
+          <a href="#"><img src="img/work5.png" class="responsive"></a>
+          <p class="title">Sky</p>
         </div>
-        <div class="four">
-          <img src="img/work9.jpg" class="responsive">
-        </div>
-
-        <div class="five">
-          <img src="img/work3.jpg" class="responsive">
+        <div class="hover four">
+          <a href="#"><img src="img/work9.jpg" class="responsive"></a>
+          <p class="title">Sky+</p>
         </div>
 
-        <div class="six">
-          <img src="img/work4.jpg" class="responsive">
+        <div class="hover five">
+          <a href="#"><img src="img/work3.jpg" class="responsive"></a>
+          <p class="title">British Transport Police</p>
+        </div>
+
+        <div class="hover six">
+          <a href="#"><img src="img/work4.jpg" class="responsive"></a>
+          <p class="title">TalkTalk</p>
         </div>
       </div>
 
