mobile responsive done

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="footer">
-        <p>designed and build by pawel klasa</p>
+        <p>designed and built by pawel klasa</p>
         <p><img src="node_modules/octicons/build/svg/mark-github.svg"></img></p>
       </div>
 
