--- a/index.html
+++ b/index.html
@@ -46,33 +46,40 @@
 
       <!-- work examples grid -->
       <div class="grid-container-work">
+        
         <div class="hover one">
+            <div class="hover-panel"></div>
           <a href="#"><img src="img/work1.jpg" class="responsive"></a>
-          <p class="title">Jaguar Land Rover</p>
+          <!-- <p class="title">Jaguar Land Rover</p> -->
         </div>
 
         <div class="hover two">
+            <div class="hover-panel"></div>
           <a href="#"><img src="img/work2.png" class="responsive"></a>
-          <p class="title">GCHQ</p>
+          <!-- <p class="title">GCHQ</p> -->
         </div>
 
         <div class="hover three">
+            <div class="hover-panel"></div>
           <a href="#"><img src="img/work5.png" class="responsive"></a>
-          <p class="title">Sky</p>
+          <!-- <p class="title">Sky</p> -->
         </div>
         <div class="hover four">
+            <div class="hover-panel"></div>
           <a href="#"><img src="img/work9.jpg" class="responsive"></a>
-          <p class="title">Sky+</p>
+          <!-- <p class="title">Sky+</p> -->
         </div>
 
         <div class="hover five">
+            <div class="hover-panel"></div>
           <a href="#"><img src="img/work3.jpg" class="responsive"></a>
-          <p class="title">British Transport Police</p>
+          <!-- <p class="title">British Transport Police</p> -->
         </div>
 
         <div class="hover six">
+            <div class="hover-panel"></div>
           <a href="#"><img src="img/work4.jpg" class="responsive"></a>
-          <p class="title">TalkTalk</p>
+          <!-- <p class="title">TalkTalk</p> -->
         </div>
       </div>
 
