overlayed titles added

--- a/index.html
+++ b/index.html
@@ -48,39 +48,53 @@
       <div class="grid-container-work">
         
         <div class="hover one">
+          <a href="#">
             <div class="hover-panel"></div>
-          <a href="#"><img src="img/work1.jpg" class="responsive"></a>
-          <!-- <p class="title">Jaguar Land Rover</p> -->
+            <img src="img/work1.jpg" class="responsive">
+            <p class="title">Jaguar Land Rover</p>
+          </a>
         </div>
 
         <div class="hover two">
+          <a href="#">
             <div class="hover-panel"></div>
-          <a href="#"><img src="img/work2.png" class="responsive"></a>
-          <!-- <p class="title">GCHQ</p> -->
+            <img src="img/work2.png" class="responsive">
+            <p class="title">GCHQ</p>
+          </a>  
         </div>
 
         <div class="hover three">
+          <a href="#">
             <div class="hover-panel"></div>
-          <a href="#"><img src="img/work5.png" class="responsive"></a>
-          <!-- <p class="title">Sky</p> -->
+            <img src="img/work5.png" class="responsive">
+            <p class="title">Sky</p> 
+          </a>
         </div>
+
         <div class="hover four">
+          <a href="#">
             <div class="hover-panel"></div>
-          <a href="#"><img src="img/work9.jpg" class="responsive"></a>
-          <!-- <p class="title">Sky+</p> -->
+            <img src="img/work9.jpg" class="responsive">
+            <p class="title">Sky+</p>
+          </a>
         </div>
 
         <div class="hover five">
+          <a href="#">
             <div class="hover-panel"></div>
-          <a href="#"><img src="img/work3.jpg" class="responsive"></a>
-          <!-- <p class="title">British Transport Police</p> -->
+            <img src="img/work3.jpg" class="responsive">
+            <p class="title">British Transport Police</p>
+          </a>
         </div>
 
         <div class="hover six">
-          <div class="hover-panel"></div>
-          <a href="#"><img src="img/work4.jpg" class="responsive"></a>
-          <!-- <p class="title">TalkTalk</p> -->
+          <a href="#">
+            <div class="hover-panel"></div>
+            <img src="img/work4.jpg" class="responsive">
+            <p class="title">TalkTalk</p>
+          </a>
         </div>
+        
       </div>
 
       <div class="footer">
