added github link to my folio

--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
             <p class="title">TalkTalk</p>
           </a>
         </div>
-        
+
       </div>
 
       <div class="footer">
-        <p>designed and built by pawel klasa</p>
-        <p><img src="node_modules/octicons/build/svg/mark-github.svg"></img></p>
+        <a href="https://github.com/pawelklasa/folio" target="blank">
+          <p>designed and built by pawel klasa</p>
+          <p><img src="node_modules/octicons/build/svg/mark-github.svg"></img></p>
+        </a>
       </div>
 
   </div>
