added work images for JLR

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
       </div>
 
       <div class="footer">
-        <a href="https://github.com/pawelklasa/folio" target="blank">
+        <a href="https://github.com/pawelklasa/folio" target="
+        blank">
           <p>designed and built by pawel klasa</p>
           <p><img src="node_modules/octicons/build/svg/mark-github.svg"></img></p>
         </a>
