created JLR page and linke it - testing linkage

--- a/pages/jlr/jlr.html
+++ b/pages/jlr/jlr.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" href="style/grid.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <title>pawel klasa</title>
 </head>
@@ -17,14 +17,13 @@
   <div class="grid-container">
 
       <div class="logo">
-          <div class="logo-text">pawel klasa</div>
-          <div class="senior">Senior <a href="#">Digital Product</a> Designer from London</div>
+          <div class="logo-text">Jaguar Land Rover</div>
       </div>
 
       <div class="moto">
         <div>
           <p>
-            <a href="index.html">WORK</a>&nbsp;&nbsp; <a href="#">BLOG</a>&nbsp;&nbsp; <a href="#">ABOUT</a>
+            <a href="../../index.html">WORK</a>&nbsp;&nbsp; <a href="#">BLOG</a>&nbsp;&nbsp; <a href="#">ABOUT</a>
           </p>
         </div>
         <!-- <div class="arrow animated infinite bounce">
@@ -48,7 +47,7 @@
       <div class="grid-container-work">
         
         <div class="hover one">
-          <a href="pages/jlr/jlr.html">
+          <a href="#">
             <div class="hover-panel"></div>
             <img src="img/work1.jpg" class="responsive">
             <p class="title">Jaguar Land Rover</p>
