product page created

--- a/pages/jlr/jlr.html
+++ b/pages/jlr/jlr.html
@@ -46,52 +46,12 @@
       <!-- work examples grid -->
       <div class="grid-container-work">
         
-        <div class="hover one">
-          <a href="#">
-            <div class="hover-panel"></div>
-            <img src="img/work1.jpg" class="responsive">
-            <p class="title">Jaguar Land Rover</p>
-          </a>
-        </div>
-
-        <div class="hover two">
-          <a href="#">
-            <div class="hover-panel"></div>
-            <img src="img/work2.png" class="responsive">
-            <p class="title">GCHQ</p>
-          </a>  
-        </div>
-
-        <div class="hover three">
-          <a href="#">
-            <div class="hover-panel"></div>
-            <img src="img/work5.png" class="responsive">
-            <p class="title">Sky</p> 
-          </a>
-        </div>
-
-        <div class="hover four">
-          <a href="#">
-            <div class="hover-panel"></div>
-            <img src="img/work9.jpg" class="responsive">
-            <p class="title">Sky+</p>
-          </a>
-        </div>
-
-        <div class="hover five">
-          <a href="#">
-            <div class="hover-panel"></div>
-            <img src="img/work3.jpg" class="responsive">
-            <p class="title">British Transport Police</p>
-          </a>
-        </div>
-
-        <div class="hover six">
-          <a href="#">
-            <div class="hover-panel"></div>
-            <img src="img/work4.jpg" class="responsive">
-            <p class="title">TalkTalk</p>
-          </a>
+        <div class="container-two">
+          <p class="work-text">Given a conceptual and technological freedom we were able to create a 
+            narrative led website to recruit purchasing managers for Jaguar Land Rover... This unique 
+            parallax experience not only served as a job application gateway but also allowed the user 
+            a unique immersion while getting the feel for the role...</p>
+            <div class="image-holder"><img src="../../img/work/jlr_01.png" class="image"></div>
         </div>
 
       </div>
@@ -100,7 +60,7 @@
         <a href="https://github.com/pawelklasa/folio" target="
         blank">
           <p>designed and built by pawel klasa</p>
-          <p><img src="node_modules/octicons/build/svg/mark-github.svg"></img></p>
+          <p><img src="../../node_modules/octicons/build/svg/mark-github.svg"></img></p>
         </a>
       </div>
 
