--- a/pages/jlr/jlr.html
+++ b/pages/jlr/jlr.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="j-style.css">
+  <link rel="stylesheet" href="j-grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <title>pawel klasa</title>
 </head>
