about page set up

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="moto">
         <div>
           <p>
-            <a href="index.html">WORK</a>&nbsp;&nbsp; <a href="pages/blog/blog.html">BLOG</a>&nbsp;&nbsp; <a href="#">ABOUT</a>
+            <a href="index.html">WORK</a>&nbsp;&nbsp; <a href="pages/blog/blog.html">BLOG</a>&nbsp;&nbsp; <a href="pages/about/about.html">ABOUT</a>
           </p>
         </div>
         <!-- <div class="arrow animated infinite bounce">
