--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
-  <link rel="stylesheet" href="j-style.css">
-  <link rel="stylesheet" href="j-grid.css">
+  <link rel="stylesheet" href="about-style.css">
+  <link rel="stylesheet" href="about-grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <title>pawel klasa</title>
 </head>
@@ -17,13 +17,13 @@
   <div class="grid-container">
 
       <div class="logo">
-          <div class="logo-text">Jaguar Land Rover</div>
+          <div class="logo-text">Who am I?</div>
       </div>
 
       <div class="moto">
         <div>
           <p>
-            <a href="../../index.html">WORK</a>&nbsp;&nbsp; <a href="../blog/blog.html">BLOG</a>&nbsp;&nbsp; <a href="../about/about.html">ABOUT</a>
+            <a href="../../index.html">WORK</a>&nbsp;&nbsp; <a href="../blog/blog.html">BLOG</a>&nbsp;&nbsp; <a href="#">ABOUT</a>
           </p>
         </div>
         <!-- <div class="arrow animated infinite bounce">
@@ -47,13 +47,9 @@
       <div class="grid-container-work">
         
         <div class="container-two">
-          <p class="work-text">Given a conceptual and technological freedom we were able to create a 
-            narrative led website to recruit purchasing managers for Jaguar Land Rover... This unique 
-            parallax experience not only served as a job application gateway but also allowed the user 
-            a unique immersion while getting the feel for the role...</p>
-            <div class="image-holder"><img src="../../img/work/jlr_01.png" class="image"></div>
+          <p>About description</p>
         </div>
-
+        
       </div>
 
       <div class="footer">
