added close button on all pages

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -14,10 +14,17 @@
   <title>pawel klasa</title>
 </head>
 <body>
+
+  <a href="../../index.html">
+    <img src="../../node_modules/octicons/build/svg/x.svg"class="close-button">
+  </a>
+
   <div class="grid-container">
 
       <div class="logo">
-          <div class="logo-text">Who am I?</div>
+        <div class="logo-text">
+          Who am I? 
+        </div>
       </div>
 
       <div class="moto">
