--- a/index.html
+++ b/index.html
@@ -48,39 +48,39 @@
         <div class="hover one">
           <a href="pages/jlr/jlr.html">
             <div class="hover-panel"></div>
-            <img src="img/work1.jpg" class="responsive">
-            <p class="title">Jaguar Land Rover</p>
+            <img src="img/talk-talk.png" class="responsive">
+            <p class="title">TalkTalk - Design System</p>
           </a>
         </div>
 
         <div class="hover two">
           <a href="#">
             <div class="hover-panel"></div>
-            <img src="img/work2.png" class="responsive">
-            <p class="title">GCHQ</p>
+            <img src="img/jlr.png" class="responsive">
+            <p class="title">Jaguar Land Rover</p>
           </a>  
         </div>
 
         <div class="hover three">
           <a href="#">
             <div class="hover-panel"></div>
-            <img src="img/work5.png" class="responsive">
-            <p class="title">Sky</p> 
+            <img src="img/gchq.png" class="responsive">
+            <p class="title">GCHQ</p>
           </a>
         </div>
 
         <div class="hover four">
           <a href="#">
             <div class="hover-panel"></div>
-            <img src="img/work9.jpg" class="responsive">
-            <p class="title">Sky+</p>
+            <img src="img/sky+.png" class="responsive">
+            <p class="title">British Sky Broadcasting</p> 
           </a>
         </div>
 
         <div class="hover five">
           <a href="#">
             <div class="hover-panel"></div>
-            <img src="img/work3.jpg" class="responsive">
+            <img src="img/btp.png" class="responsive">
             <p class="title">British Transport Police</p>
           </a>
         </div>
@@ -88,8 +88,8 @@
         <div class="hover six">
           <a href="#">
             <div class="hover-panel"></div>
-            <img src="img/work4.jpg" class="responsive">
-            <p class="title">TalkTalk</p>
+            <img src="img/work4.png" class="responsive">
+            <p class="title">Sky+</p>
           </a>
         </div>
 
