--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="grid-container-work">
         
         <div class="hover one">
-          <a href="pages/jlr/jlr.html">
+          <a href="pages/talktalk/talktalk.html">
             <div class="hover-panel"></div>
             <img src="img/talk-talk.png" class="responsive">
             <p class="title">TalkTalk - Design System</p>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="hover two">
-          <a href="#">
+          <a href="pages/jlr/jlr.html">
             <div class="hover-panel"></div>
             <img src="img/jlr.png" class="responsive">
             <p class="title">Jaguar Land Rover</p>
