jlr and gchq added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div class="logo">
           <div class="logo-text">pawel klasa</div>
-          <div class="senior">Senior <a href="#">Digital Product</a> Designer from London</div>
+          <div class="senior">Senior <a href="pages/about/about.html">Digital Product</a> Designer from London</div>
       </div>
 
       <div class="moto">
@@ -62,7 +62,7 @@
         </div>
 
         <div class="hover three">
-          <a href="#">
+          <a href="pages/gchq/gchq.html">
             <div class="hover-panel"></div>
             <img src="img/gchq.png" class="responsive">
             <p class="title">GCHQ</p>
