btp and sky plus pages added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="hover four">
-          <a href="#">
+          <a href="pages/sky-plus/plus.html">
             <div class="hover-panel"></div>
             <img src="img/sky+.png" class="responsive">
             <p class="title">British Sky Broadcasting</p> 
@@ -78,7 +78,7 @@
         </div>
 
         <div class="hover five">
-          <a href="#">
+          <a href="pages/btp/btp.html">
             <div class="hover-panel"></div>
             <img src="img/btp.png" class="responsive">
             <p class="title">British Transport Police</p>
