--- a/pages/btp/btp.html
+++ b/pages/btp/btp.html
@@ -22,7 +22,7 @@
   <div class="grid-container">
 
       <div class="logo">
-          <div class="logo-text">GCHQ</div>
+          <div class="logo-text">British Transport Police</div>
           <div class="senior">UX / UI</div>
       </div>
 
@@ -59,12 +59,16 @@
           <br>
 
           <p class="work-text">"Raising the profile of BTP is key to our attraction strategy and the website re-design has been a critical element of this process. We were keen to demonstrate the breadth of roles and the diverse nature of the organisation, whilst promoting BTP as an 'employer of choice" -Monique Myers, Recruitment Manager, British Transport Police.
+            </p>
+            <br>
+
+          <p class="work-title">The Idea</p>
+          <p class="work-text">British Transport Police provided allot of usefull information which helped us understand more about the day to day duties The Officers face. With that came some really interesting statistics whch helped us understand how big and important the force really is.
+            The problem BTP officers face is that they are less visible or recognisable as a seperate police force. This website aims to solve that problem by placing some of the officers in a familiar environment backed by some remarkable statistics. 
           </p>
           <br>
 
-          <p class="work-title">Awards</p>
-          <p class="work-text">Best Recruitment Website at the PPMA Awards 2014
-          </p>
+          <div class="image-holder"><img src="../../img/work/btp-sketch.png" class="image"></div>
           <br>
 
           <div class="image-holder"><img src="../../img/work/btp_04.png" class="image"></div>
@@ -77,6 +81,11 @@
           <br>
 
           <div class="image-holder"><img src="../../img/work/btp_03.png" class="image"></div>
+          <br>
+
+          <p class="work-title">Awards</p>
+          <p class="work-text">Best Recruitment Website at the PPMA Awards 2014
+          </p>
           <br>
 
         </div>
