--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -82,6 +82,8 @@
           <br>
 
           <div class="image-holder"><img src="../../img/work/library2-talktalk.png" class="image"></div>
+
+          <div class="image-holder"><img src="../../img/work/accordion-talktalk.png" class="image"></div>
           <br>
 
           <p class="work-title">The Design and Front-end stage</p>
