--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="grid-container">
 
       <div class="logo">
-          <div class="logo-text">pawel klasa</div>
+          <div class="image-holder"><img src="img/logo.png" class="brand"></div>
           <div class="senior">Senior <a href="pages/about/about.html">Digital Product</a> Designer from London</div>
       </div>
 
