--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div class="logo">
           <div class="image-holder"><img src="img/logo.png" class="brand"></div>
-          <div class="senior">Senior <a href="pages/about/about.html">Digital Product</a> Designer from London</div>
+          <div class="senior"><a href="pages/about/about.html">Digital Product</a> Designer from London</div>
       </div>
 
       <div class="moto">
