--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -55,15 +55,15 @@
         
         <div class="container-two">
           <p class="work-text">I am a Senior Digital Product Designer working in London. I am a huge stickler for pixel perfection
-             in my designs and for clean code including best UX practices. I strongly believe that a variety of solid 
-             background in UX UI and Front-end development are key to glue together a beautifuly designed product 
-             that works flowlessly for all online users inluding those less fortunate with disabilities. <br>Accessibility 
-             has been a great part of my proffessional experience it influenced the way I design and consider web based 
-             projects but also native mobile environments.<br> I come from a strong design background but I thoroughly 
-             enjoy coding, Front-end coding became of my creative procesess. I love prototyping in a browser and making sure my 
+             in my designs and for clean code including best UX practices. I strongly believe that solid 
+             background in UX, UI and Front-end development are key to glue together a beautifuly designed product 
+             that works flowlessly for all online users inluding those less fortunate with disabilities. <br><br>Accessibility 
+             has been a great part of my professional life it had a strong influence on the way I design and consider web based 
+             projects but also native mobile environments.<br><br> I come from a strong design background but I thoroughly 
+             enjoy coding, Front-end coding became an essential ingredient in my creative procesess. I love prototyping in a browser and making sure my 
              designs are implemented appropriately. My relationship with coding and understanding user experiences allows me to build great connections
             within big agile teams but also smaller groups. Great projects are delivered by great teams, teams 
-          of passionate designers and developers, able to comunicate and translate their ideas into digital.</p>
+          of passionate designers and developers, able to comunicate and translate their ideas into digital products.</p>
         </div>
         
       </div>
