--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <div class="hover six">
           <a href="#">
             <div class="hover-panel"></div>
-            <img src="img/work4.png" class="responsive">
-            <p class="title">Sky+</p>
+            <img src="img/talk2.png" class="responsive">
+            <p class="title">TalkTalk - Selected projects</p>
           </a>
         </div>
 
