--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -74,6 +74,8 @@
               Building a responsive Single Page Web Application was an untrodden path at TalkTalk, this gave us technical and creative freedom to set principles and best preactices in design and front-end implementation. We started from researching and defigning UX and UI guidelines for each component we have set out to create for our prototype. This consisted of navigation, buttons, footer, general page styling, typography and iconography.
               One of the requirements was to adhere to AA accessibility stadards enabling screen readers and many other funcionality required for disabled users to be able to access the website.<br>
           </p>
+
+          <div class="image-holder"><img src="../../img/work/patern-ux.png" class="image"></div>
           <br>
 
           <p class="work-text">
@@ -100,6 +102,11 @@
               Everytime a component was created I would present the UX and UI Designs but also simple HTML/CSS prototype to our stakeholders. This ensured we Were able to move on fto another component and make sure there's no surpirses or major changes later in the project. 
             </p>
             <br>
+
+          <div class="image-holder"><img src="../../img/work/lib1.png" class="image"></div>
+
+          <div class="image-holder"><img src="../../img/work/lib2.png" class="image"></div>
+          <br>
 
             <div class="image-holder"><img src="../../img/work/landing-talktalk.png" class="image"></div>
         </div>
