--- a/index.html
+++ b/index.html
@@ -27,18 +27,6 @@
             <a href="index.html">WORK</a>&nbsp;&nbsp; <a href="pages/blog/blog.html">BLOG</a>&nbsp;&nbsp; <a href="pages/about/about.html">ABOUT</a>
           </p>
         </div>
-        <!-- <div class="arrow animated infinite bounce">
-            <svg width="30" height="50" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
-            <g>
-              <g>
-                <polygon points="31,0 31,60.586 23.707,53.293 22.293,54.854 31.293,64 32.707,64 41.707,54.854 40.293,53.366 33,60.586 33,0 		
-                  "/>
-              </g>
-            </g>
-            
-            </svg>
-        </div> -->
         
       </div>
 
@@ -86,7 +74,7 @@
         </div>
 
         <div class="hover six">
-          <a href="#">
+          <a href="pages/selected/selected.html">
             <div class="hover-panel"></div>
             <img src="img/talk2.png" class="responsive">
             <p class="title">TalkTalk - Selected projects</p>
