--- a/pages/gchq/gchq.html
+++ b/pages/gchq/gchq.html
@@ -54,8 +54,13 @@
         
         <div class="container-two">
           <p class="work-title">Cyber Jobs</p>
-          <p class="work-text">Stepping up from the multi award winning recruitment campaign "Can you crack it?" that TMP Worldwide devised in 2012, we launched the next challenge for applicants for new roles at GCHQ.  It needed to entice the next generation of technical talent.  Whilst being a puzzle, the new idea is also the ultimate test for would be code crackers.  It is designed to find those who have the intellectual ability but not necessarily the practical experience of working in the field of cyber security.
-            The challenge for 2013 was to crack a series of cryptic codes.  The brainteaser consisted of 29 blocks of 5 letters which candidates had to decipher into 5 answers.  The answers then lead the applicant to an online 'treasure hunt' (with the latest technical gadgets as prizes up for grabs) which hopefuls have six weeks to complete. 
+          <p class="work-text">Launched as a challenge for applicants for new roles at GCHQ.  It needed to entice the next generation 
+            of technical talent.  Whilst being a puzzle, the idea is also the ultimate test for would be code crackers.  It is designed 
+            to find those who have the intellectual ability but not necessarily the practical experience of working in the field of cyber 
+            security.
+            The challenge was to crack a series of cryptic codes. The brainteaser consisted of 29 blocks of 5 letters which 
+            candidates had to decipher into 5 answers.  The answers then lead the applicant to an online 'treasure hunt' (with the latest 
+            technical gadgets as prizes up for grabs) which hopefuls have six weeks to complete. 
           </p>
           <br>
 
