finished talktalk baseline

--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -122,11 +122,15 @@
           <p class="work-title">Finishing touches</p>
           <p class="work-text">
               In total we have created 68 unique components that are used today for building pages and cuntomer journeys at TalkTalk. This library
-              is constantly updated and improved.  
+              is constantly updated and improved. Each component has it's own dedicated page with UX and UI writ-up and a code snippet for developers. 
+              It allowed us to share this library with our external partners and withing many branches at TalkTalk.
             </p>
             <br>
 
             <div class="image-holder"><img src="../../img/work/landing-talktalk.png" class="image"></div>
+
+            <div class="image-holder"><img src="../../img/work/lib4.png" class="image"></div>
+
             <div class="image-holder"><img src="../../img/work/lib3.png" class="image"></div>
         </div>
 
