selected text change

--- a/pages/selected/selected.html
+++ b/pages/selected/selected.html
@@ -38,7 +38,7 @@
       <div class="grid-container-work">
         
         <div class="container-two">
-          <p class="work-text">Due to my non-disclosure agreement those are available upon request.
+          <p class="work-text">Due to my non-disclosure agreement still in place, those are available upon request.
           </p>
           <br>
 
