--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -54,6 +54,8 @@
       <div class="grid-container-work">
         
         <div class="container-two">
+            <div class="image-holder"><img src="../../img/work/me.jpg" class="image"></div>
+            <br>
           <p class="work-text">I am a Senior Digital Product Designer working in London. I am a huge stickler for pixel perfection
              in my designs and for clean code including best UX practices. I strongly believe that solid 
              background in UX, UI and Front-end development are key to glue together a beautifuly designed product 
