--- a/pages/selected/selected.html
+++ b/pages/selected/selected.html
@@ -38,11 +38,18 @@
       <div class="grid-container-work">
         
         <div class="container-two">
-          <p class="work-text">Due to my non-disclosure agreement still in place, those are available upon request.
+          <p class="work-title">Service Status and Self Repair</p>
+          <p class="work-text">
           </p>
           <br>
 
+          <div class="image-holder"><img src="../../img/work/repair-1.png" class="image"></div>
 
+          <div class="image-holder"><img src="../../img/work/repair-2.png" class="image"></div>
+
+          <div class="image-holder"><img src="../../img/work/repair-3.png" class="image"></div>
+          <br>
+          
         </div>
 
       </div>
