--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -82,6 +82,8 @@
           </p>
 
           <div class="image-holder"><img src="../../img/work/patern-ux.png" class="image"></div>
+
+          <div class="image-holder"><img src="../../img/work/patern-ux.png" class="image"></div>
           <br>
 
           <p class="work-text">
@@ -106,6 +108,8 @@
           <br>
 
           <div class="image-holder"><img src="../../img/work/library-notifications-talktalk.png" class="image"></div>
+          
+          <div class="image-holder"><img src="../../img/work/baseline-headers.png" class="image"></div>
           <br>
 
           <p class="work-text">
