--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -40,54 +40,41 @@
         
         <div class="container-two">
           <p class="work-title">The problem</p>
-          <p class="work-text">I was hired by TalkTalk in 2014 to work on their first responsive Homepage. I have created a few 
-            early designs and soon realised I will need a design system if I want to keep the consistency in design and in build 
-            across TalkTalk's online products. There are vast independent sections of TalkTalk's website such as 'Help & Support', 
-            'Community', 'My Account', 'TV & News Portal'.
-            All those independent sections had to be re-designed and re-built. This was a huge task that required certain level of 
-            automation in Design but also in Front-end implementation. 
+          <p class="work-text">I was hired by TalkTalk in 2014 to work on their first responsive Homepage. I have created a few early designs and soon realised I will need a design system if I want to keep the consistency in design and in build across TalkTalk's online products. There are vast independent sections of TalkTalk's website such as 'Help & Support', 'Community', 'My Account', 'TV & News Portal'. All those independent sections had to be re-designed and re-built. This was a huge task that required certain level of automation in Design but also in Front-end implementation.
+ 
           </p>
           <br>
-          <p class="work-text">This required entirely new strategy and planning. The most challenging part was getting that elusive 
-            'Buy-in' from our senior steakholders and The Business in general to secure the funding.</p>
+          <p class="work-text">This required entirely new strategy and planning. The most challenging part was getting that elusive 'Buy-in' from our senior stakeholders and The Business in general to secure the funding.
+            </p>
           <br>
-          <p class="work-text">I have partnered up with our Principle Developer and Architect to come up with a strategy and most 
-            efficient way of implementing a design system.</p>
+          <p class="work-text">I have partnered up with our Principle Developer and Architect to come up with a strategy and most efficient way of implementing a design system.
+            </p>
           <br>
 
           <p class="work-title">Our approach</p>
-          <p class="work-text">TalkTalk is a budget Internet Service Provider and we new we will have to rely on frameworks to keep 
-            the budget as low as possible. After extensive research and tests we have decided to go with AngularJS and Bootstrap.
-            Our vision was to treat TalkTalk's online products as independent Single Page Web Applications, supported by already 
-            established responsive framework re-styled with TalkTalk's brand guidelines in mind. We were asked to create a working 
-            prototype within a month and present it to the steakholders.
+          <p class="work-text">TalkTalk is a budget Internet Service Provider and we knew we will have to rely on frameworks to keep the budget as low as possible. After extensive research and tests, we have decided to go with AngularJS and Bootstrap. Our vision was to treat TalkTalk's online products as independent Single Page Web Applications, supported by already established responsive framework re-styled with TalkTalk's brand guidelines in mind. We were asked to create a working prototype within a month and present it to the stakeholders.
+
           </p>
           <br>
 
           <p class="work-title">Prototyping</p>
           <p class="work-text">
-              Building a responsive Single Page Web Application was an untrodden path at TalkTalk, this gave us technical and creative 
-              freedom to set principles and best preactices in design and front-end implementation. We started from researching and 
-              defigning UX and UI guidelines for each component we have set out to create for our prototype. This consisted of navigation, 
-              buttons, footer, general page styling, typography and iconography.
-              One of the requirements was to adhere to AA accessibility stadards enabling screen readers and many other funcionality 
-              required for disabled users to be able to access the website.<br>
+              Building a responsive Single Page Web Application was an untrodden path at TalkTalk, this gave us technical and creative freedom to set principles and best practices in design and front-end implementation. We started from researching and defining UX and UI guidelines for each component we have set out to create for our prototype. This consisted of navigation, buttons, footer, general page styling, typography and iconography. One of the requirements was to adhere to AA accessibility standards enabling screen readers and many other functionalities required for disabled users to be able to access the website.
+<br>
           </p>
           <br>
 
           <p class="work-text">
-              I have created cutouts of all the components we wanted for our prototype in all 4 breaking points. This was handy when presenting 
-              the concept to the rest of the business. This allowed better understanding by interaction. Seeing how singular components stakc 
-              into larger modules and then into pages allowed all involved to imagine how this would work in practice.<br>
+              I have created cut-outs of all the components we wanted for our prototype in all 4 breaking points. This was handy when presenting the concept to the rest of the business. This allowed better understanding by interaction. Seeing how singular components stack into larger modules and then into pages allowed all involved to imagine how this would work in practice.
+<br>
           </p>
 
           <div class="image-holder"><img src="../../img/work/patern-ux.png" class="image"></div>
           <br>
 
           <p class="work-text">
-            At this stage I've created a simple UX library in Axure. This was a list of components and rules concerning usability, 
-            accessibility and usage. It also served as a User Experience documentation hosted online for anyone to view and understand 
-            how our compenents work and should behave.
+              At this stage, I've created a simple UX library in Axure. This was a list of components and rules concerning usability, accessibility and usage. It also served as a User Experience documentation hosted online for anyone to view and understand how our components work and should behave.
+
           </p>
           <br>
 
@@ -98,10 +85,8 @@
 
           <p class="work-title">The Design and Front-end stage</p>
           <p class="work-text">
-            I have used Sketch as my main design tool. There were many advantages for using it. Sketch integrates allot of usefull plugins 
-            created by ever growing community. It had great design library intergration posibilities. The files unlike Photoshop were 
-            small in size thanks to vector graphics. 
-            With integrated pattern library I was able to amend my designs with ease and almost instantaniously across all projects. 
+              I have used Sketch as my main design tool. There were many advantages for using it. Sketch integrates allot of useful plugins created by ever growing community. It had great design library integration possibilities. The files unlike Photoshop were small in size thanks to vector graphics. With integrated pattern library, I was able to amend my designs with ease and almost instantaneously across all projects.
+
           </p>
           <br>
 
@@ -123,9 +108,10 @@
 
           <p class="work-title">Finishing touches</p>
           <p class="work-text">
-              In total we have created 68 unique components that are used today for building pages and cuntomer journeys at TalkTalk. This library
-              is constantly updated and improved. Each component has it's own dedicated page with UX and UI writ-up and a code snippet for developers. 
-              It allowed us to share this library with our external partners and withing many branches at TalkTalk.
+              In total, we have created 68 unique components that are used today for building pages and customer journeys at TalkTalk. This library
+              is constantly updated and improved. Each component has its own dedicated page with UX and UI writ-up and a code snippet for developers. 
+              It allowed us to share this library with our external partners and within many branches at TalkTalk.
+
             </p>
             <br>
 
