--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -96,8 +96,8 @@
           <br>
 
           <p class="work-text">
-              The Continous dign-off process ensured we were able to move onto another component and make sure there's no surpirses or 
-              major changes later in the project. 
+              The Continuous sign-off process ensured we were able to move onto another component and make sure there's no surprises or major changes later in the project.
+ 
             </p>
             <br>
 
