--- a/pages/sky-plus/plus.html
+++ b/pages/sky-plus/plus.html
@@ -40,8 +40,8 @@
         
         <div class="container-two">
             <p class="work-title">Sky Responsive Homepage</p>
-            <p class="work-text">Working on Sky's first responsive Homepage. Prototyping and shaping up the UX principles. 
-              Defigning responsive styleguidelines breakpoints, fonts, imagery behaviour, iconography, accessibility.
+            <p class="work-text">Working on Sky's first responsive Homepage. Prototyping and shaping up the UX principles. Defining responsive style guidelines breakpoints, fonts, imagery behaviour, iconography, accessibility.
+
             </p>
             <br>
   
