--- a/pages/btp/btp.html
+++ b/pages/btp/btp.html
@@ -63,8 +63,8 @@
             <br>
 
           <p class="work-title">The Idea</p>
-          <p class="work-text">British Transport Police provided allot of usefull information which helped us understand more about the day to day duties The Officers face. With that came some really interesting statistics whch helped us understand how big and important the force really is.
-            The problem BTP officers face is that they are less visible or recognisable as a seperate police force. This website aims to solve that problem by placing some of the officers in a familiar environment backed by some remarkable statistics. 
+          <p class="work-text">British Transport Police provided allot of useful information which helped us understand more about the day to day duties The Officers face. With that came some really interesting statistics which helped us understand how big and important the force really is. The problem BTP officers face is that they are less visible or recognisable as a separate police force. This website aims to solve that problem by placing some of the officers in a familiar environment backed by some remarkable statistics.
+
           </p>
           <br>
 
